--- a/src/styles/animations/pop-out-modal.scss
+++ b/src/styles/animations/pop-out-modal.scss
@@ -1,10 +1,10 @@
-@mixin slide-out-modal {
-  animation: slide-out-modal ease 1000ms forwards;
-  -webkit-animation: slide-out-modal ease 1000ms forwards;
-  -moz-animation: slide-out-modal ease 1000ms forwards;
+@mixin pop-out-modal {
+  animation: pop-out-modal ease 1000ms forwards;
+  -webkit-animation: pop-out-modal ease 1000ms forwards;
+  -moz-animation: pop-out-modal ease 1000ms forwards;
 }
 
-@keyframes slide-out-modal {
+@keyframes pop-out-modal {
   from {
     transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
   }
@@ -13,7 +13,7 @@
   }
 }
 
-@-moz-keyframes slide-out-modal {
+@-moz-keyframes pop-out-modal {
   from {
     transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
   }
@@ -22,7 +22,7 @@
   }
 }
 
-@-webkit-keyframes slide-out-modal {
+@-webkit-keyframes pop-out-modal {
   from {
     transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
   }
