--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,14 +1,6 @@
 @import 'styles/colors.scss';
-
-@keyframes slide-in-sidebar {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
+@import 'styles/animations/slide-in-right.scss';
 
 .sidebar {
-  animation: slide-in-sidebar 1000ms;
+  @include slide-in-right();
 }
