--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,6 +1,11 @@
 @import 'styles/colors.scss';
 @import 'styles/animations/slide-in-right.scss';
+@import 'styles/animations/slide-out-right.scss';
 
 .sidebar {
   @include slide-in-right();
+
+  &_closing {
+    @include slide-out-right();
+  }
 }
