--- a/src/styles/mixins/text-styles.scss
+++ b/src/styles/mixins/text-styles.scss
@@ -14,3 +14,13 @@
   font-size: $base-font-size;
   font-family: $Regular;
 }
+
+@mixin input-text-styles() {
+  font-family: $Monospace;
+  font-size: $small-font-size;
+  padding: $small-padding;
+  border: none;
+  &:focus-visible {
+    outline: none;
+  }
+}
