--- a/src/components/inputs/label/styles.scss
+++ b/src/components/inputs/label/styles.scss
@@ -1,6 +1,17 @@
 @import 'styles/sizes.scss';
+@import 'styles/colors.scss';
 
 .label {
   padding: $small-padding;
   font-size: $tiny-font-size;
+
+  &__asterisk {
+    color: $light-strong-accent-color;
+    margin-left: $default-margin;
+    text-decoration: none;
+
+    &_dark {
+      color: $dark-strong-accent-color;
+    }
+  }
 }
