--- a/src/components/inputs/label/styles.scss
+++ b/src/components/inputs/label/styles.scss
@@ -6,12 +6,12 @@
   font-size: $tiny-font-size;
 
   &__asterisk {
-    color: $light-strong-accent-color;
+    color: $light-weak-accent-color;
     margin-left: $default-margin;
     text-decoration: none;
 
     &_dark {
-      color: $dark-strong-accent-color;
+      color: $dark-weak-accent-color;
     }
   }
 }
