--- a/src/components/inputs/checkbox/styles.scss
+++ b/src/components/inputs/checkbox/styles.scss
@@ -1,69 +1,39 @@
 @import 'styles/sizes.scss';
+@import 'styles/colors.scss';
 
 .checkbox-input {
-  /* для элемента input c type="checkbox" */
+  padding: $default-padding 0;
 
-  &__custom {
-    & {
-      position: absolute;
-      z-index: -1;
-      opacity: 0;
+  // Hide the default checkbox
+  &__default {
+    display: none;
+  }
+
+  // Add custom styles for the checkbox label
+  &__label {
+    font-size: $base-font-size;
+    display: flex;
+    align-items: center;
+    padding: 0;
+
+    &:hover {
+      text-shadow: $light-text-shadow;
     }
 
-    /* для элемента label, связанного с & */
-    & + label {
-      display: inline-flex;
-      align-items: center;
-      user-select: none;
+    &::before {
+      margin-right: $default-margin;
+      padding-bottom: 0.125rem;
+      color: $light-strong-accent-color;
     }
 
-    /* создание в label псевдоэлемента before со следующими стилями */
-    & + label::before {
-      content: '';
-      display: inline-block;
-      width: 1em;
-      height: 1em;
-      flex-shrink: 0;
-      flex-grow: 0;
-      border: 1px solid #adb5bd;
-      border-radius: 0.25em;
-      margin-right: 0.5em;
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: 50% 50%;
-    }
+    &_dark {
+      &::before {
+        color: $dark-strong-accent-color;
+      }
 
-    /* стили при наведении курсора на checkbox */
-    &:not(:disabled):not(:checked) + label:hover::before {
-      border-color: #b3d7ff;
-    }
-
-    /* стили для активного чекбокса (при нажатии на него) */
-    &:not(:disabled):active + label::before {
-      background-color: #b3d7ff;
-      border-color: #b3d7ff;
-    }
-
-    /* стили для чекбокса, находящегося в фокусе */
-    &:focus + label::before {
-      box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-    }
-
-    /* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-    &:focus:not(:checked) + label::before {
-      border-color: #80bdff;
-    }
-
-    /* стили для чекбокса, находящегося в состоянии checked */
-    &:checked + label::before {
-      border-color: #0b76ef;
-      background-color: #0b76ef;
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-    }
-
-    /* стили для чекбокса, находящегося в состоянии disabled */
-    &:disabled + label::before {
-      background-color: #e9ecef;
+      &:hover {
+        text-shadow: $dark-text-shadow;
+      }
     }
   }
 }
