ts-28: add draft styles for the select

--- a/src/components/inputs/text-input/styles.scss
+++ b/src/components/inputs/text-input/styles.scss
@@ -1,6 +1,7 @@
 @import 'styles/mixins/text-styles.scss';
 @import 'styles/mixins/input-styles.scss';
 @import 'styles/colors.scss';
+@import 'styles/sizes.scss';
 
 .text-input {
   display: flex;
