ts-29: fix the select height

--- a/src/components/inputs/select/styles.scss
+++ b/src/components/inputs/select/styles.scss
@@ -17,6 +17,7 @@
   &__label {
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
+    padding-bottom: 0.588rem;
   }
 
   &__field {
