ts-33: extract settings initial state

--- a/src/components/app-settings/styles.scss
+++ b/src/components/app-settings/styles.scss
@@ -2,4 +2,12 @@
 
 .settings {
   padding: $big-padding;
+
+  .select {
+    margin-bottom: $big-margin;
+  }
+
+  .button {
+    margin-top: $big-margin;
+  }
 }
