ts-36: add css breakpoints

--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -17,3 +17,8 @@ $scrollbar-width: 0.6rem;
 $base-font-size: 1.2rem;
 $small-font-size: 1rem;
 $tiny-font-size: 0.8rem;
+
+// Screen breakpoints
+$max-mobile-width: 480px;
+$max-table-width: 768px;
+$max-small-screen-width: 1024px;
