ts-36: add media queries for  small screens

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -27,4 +27,9 @@
       margin-left: $big-margin;
     }
   }
+
+  // Small screen styles
+  @media (max-width: $max-small-screen-width) {
+    grid-template-columns: 1fr 5fr 5fr 1fr;
+  }
 }
