--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -26,4 +26,9 @@
       margin: 0 $default-margin;
     }
   }
+
+  // Small screen styles
+  @media (max-width: $max-small-screen-width) {
+    grid-template-columns: 3fr 6fr 3fr;
+  }
 }
