--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -30,6 +30,11 @@
 
   // Small screen styles
   @media (max-width: $max-small-screen-width) {
-    grid-template-columns: 1fr 5fr 5fr 1fr;
+    grid-template-columns: 0.5fr 5fr 5fr 0.5fr;
+  }
+
+  // Tablet screen styles
+  @media (max-width: $max-table-width) {
+    grid-template-columns: 0.2fr 5fr 5fr 0.2fr;
   }
 }
