--- a/src/components/layout/styles.scss
+++ b/src/components/layout/styles.scss
@@ -76,7 +76,7 @@
 
   // Small screen styles
   @media (max-width: $max-small-screen-width) {
-    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-columns: 0.5fr 11fr 0.5fr;
 
     &__navigation,
     &__sidebar {
@@ -96,5 +96,10 @@
     &__sidebar {
       right: 0;
     }
+  }
+
+  // Tablet screen styles
+  @media (max-width: $max-table-width) {
+    grid-template-columns: 0.2fr 11.6fr 0.2fr;
   }
 }
