ts-36: add styles for the mobile screen

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -49,9 +49,20 @@
     }
 
     &__right-panel {
+      justify-self: end;
       #button_id_5 {
         display: none;
       }
+    }
+  }
+
+  // Mobile screen styles
+  @media (max-width: $max-mobile-width) {
+    grid-gap: $default-margin;
+    grid-template-columns: 1fr 5fr 6fr;
+
+    &__heading {
+      font-size: $base-font-size;
     }
   }
 }
