--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -36,5 +36,12 @@
   // Tablet screen styles
   @media (max-width: $max-table-width) {
     grid-template-columns: 0.2fr 5fr 5fr 0.2fr;
+    font-size: $tiny-font-size;
+  }
+
+  // Mobile screen styles
+  @media (max-width: $max-mobile-width) {
+    grid-template-columns: 0.1fr 5fr 5fr 0.1fr;
+    font-size: $tiny-font-size;
   }
 }
