--- a/src/components/layout/styles.scss
+++ b/src/components/layout/styles.scss
@@ -102,4 +102,9 @@
   @media (max-width: $max-table-width) {
     grid-template-columns: 0.2fr 11.6fr 0.2fr;
   }
+
+  // Mobile screen styles
+  @media (max-width: $max-mobile-width) {
+    grid-template-columns: 0.1fr 11.8fr 0.1fr;
+  }
 }
