--- a/src/components/table/styles.scss
+++ b/src/components/table/styles.scss
@@ -1,7 +1,38 @@
+@import 'styles/sizes.scss';
+@import 'styles/colors.scss';
+
 .table {
+  border-collapse: collapse;
+
+  th,
+  td {
+    text-align: center;
+  }
+
   &__head {
+    th {
+      padding: $default-padding;
+      border: $light-border;
+      text-align: center;
+    }
   }
 
   &__body {
+    td {
+      padding: $default-padding;
+      text-align: center;
+    }
+  }
+
+  &__checkbox {
+    padding: 0;
+    .checkbox-input__default {
+      top: 0;
+      left: 0;
+    }
+    .label__text {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
