ts-38: add dark styles

--- a/src/components/table/styles.scss
+++ b/src/components/table/styles.scss
@@ -11,20 +11,27 @@
     border: $light-border;
   }
 
+  &__cell_heading {
+    text-shadow: $light-text-shadow;
+  }
+
   // Remove side borders
   & &__row &__cell:first-child {
     border-left: none;
   }
+
   & &__row &__cell:last-child {
     border-right: none;
   }
 
+  // Highlight the selected row
   &__row {
     &_selected {
       background-color: $light-foreground-color;
     }
   }
 
+  // Remove the default checkbox input styles
   &__checkbox {
     padding: 0;
     .checkbox-input__default {
@@ -34,6 +41,21 @@
     .label__text {
       padding: 0;
       margin: 0;
+    }
+  }
+
+  // Dark theme colors
+  &_dark {
+    .table__cell {
+      border: $dark-border;
+    }
+    .table__row {
+      &_selected {
+        background-color: $dark-foreground-color;
+      }
+    }
+    .table__cell_heading {
+      text-shadow: $dark-text-shadow;
     }
   }
 }
