--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -12,6 +12,7 @@ $big-margin: 1rem;
 $header-height: 5rem;
 $footer-height: 2rem;
 $scrollbar-width: 0.6rem;
+$tab-height: 2.4rem;
 
 // Fonts
 $base-font-size: 1.2rem;
