--- a/src/components/tab-list/styles.scss
+++ b/src/components/tab-list/styles.scss
@@ -62,4 +62,50 @@
       border-top: $dark-border;
     }
   }
+
+  // Vertical tabs
+  &_vertical {
+    display: flex;
+
+    .tab-list__tabs {
+      flex-direction: column;
+      align-items: flex-end;
+    }
+
+    .tab-list__tab {
+      display: inline-flex;
+      align-items: center;
+      width: max-content;
+      margin-right: 0;
+      margin-bottom: $small-margin;
+      border-bottom-left-radius: $border-radius;
+      border-bottom-right-radius: 0;
+      border-top-right-radius: 0;
+      padding: $default-padding $small-padding;
+
+      border-right: none;
+      border-bottom: $light-border;
+
+      &_active {
+        left: 1px;
+        z-index: $base-z-index;
+      }
+    }
+
+    .tab-list__content {
+      width: 100%;
+      border-left: $light-border;
+      padding: $default-padding $default-padding $default-padding $big-padding;
+    }
+  }
+
+  &_vertical.tab-list_dark {
+    .tab-list__tab {
+      border-bottom: $dark-border;
+    }
+
+    .tab-list__content {
+      border-left: $dark-border;
+    }
+  }
 }
