--- a/src/components/tab-list/styles.scss
+++ b/src/components/tab-list/styles.scss
@@ -6,36 +6,33 @@
   &__tabs {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: $big-margin;
   }
 
   &__tab {
     cursor: pointer;
+    position: relative;
     height: $tab-height;
     padding: $small-padding $default-padding;
-    border-top-left-radius: $border-radius;
-    border-top-right-radius: $border-radius;
-    margin-right: $small-margin;
+    border-radius: $border-radius;
+    margin-right: $default-margin;
     z-index: $panel-z-index;
-
-    border-top: $light-border;
-    border-right: $light-border;
-    border-left: $light-border;
-    background-color: $light-foreground-color;
+    box-shadow: $light-button-shadow;
 
     &:hover {
-      text-shadow: $light-text-shadow;
+      top: 0.2rem;
     }
 
     &_active {
-      background-color: $light-background-color;
-      position: relative;
-      top: 1px;
+      background-color: $light-foreground-color;
+      height: $tab-height;
+      top: 0.2rem;
       z-index: $base-z-index;
     }
   }
 
   &__content {
-    padding: $big-padding 0 $default-padding 0;
+    padding: $default-padding 0;
     border-bottom: $light-border;
     border-top: $light-border;
   }
@@ -43,17 +40,10 @@
   // Dark styles
   &_dark {
     .tab-list__tab {
-      border-top: $dark-border;
-      border-right: $dark-border;
-      border-left: $dark-border;
-      background-color: $dark-foreground-color;
-
-      &:hover {
-        text-shadow: $dark-text-shadow;
-      }
+      box-shadow: $dark-button-shadow;
 
       &_active {
-        background-color: $dark-background-color;
+        background-color: $dark-foreground-color;
       }
     }
 
