ts-43: change vertical styles

--- a/src/components/tab-list/styles.scss
+++ b/src/components/tab-list/styles.scss
@@ -16,8 +16,8 @@
     padding: $small-padding $default-padding;
     border-radius: $border-radius;
     margin-right: $default-margin;
-    z-index: $panel-z-index;
     box-shadow: $light-button-shadow;
+    z-index: $base-z-index;
 
     &:hover {
       top: 0.2rem;
@@ -27,7 +27,7 @@
       background-color: $light-foreground-color;
       height: $tab-height;
       top: 0.2rem;
-      z-index: $base-z-index;
+      z-index: $panel-z-index;
     }
   }
 
@@ -60,6 +60,8 @@
     .tab-list__tabs {
       flex-direction: column;
       align-items: flex-end;
+      margin-bottom: $small-margin;
+      margin-top: $small-margin;
     }
 
     .tab-list__tab {
@@ -67,35 +69,25 @@
       align-items: center;
       width: max-content;
       margin-right: 0;
-      margin-bottom: $small-margin;
-      border-bottom-left-radius: $border-radius;
-      border-bottom-right-radius: 0;
-      border-top-right-radius: 0;
+      margin-bottom: $big-margin;
+      border-radius: $border-radius;
       padding: $default-padding $small-padding;
 
-      border-right: none;
-      border-bottom: $light-border;
+      &:hover {
+        top: 0;
+        left: 0.2rem;
+      }
 
       &_active {
-        left: 1px;
-        z-index: $base-z-index;
+        top: 0;
+        left: 0.2rem;
+        z-index: $panel-z-index;
       }
     }
 
     .tab-list__content {
       width: 100%;
-      border-left: $light-border;
       padding: $default-padding $default-padding $default-padding $big-padding;
-    }
-  }
-
-  &_vertical.tab-list_dark {
-    .tab-list__tab {
-      border-bottom: $dark-border;
-    }
-
-    .tab-list__content {
-      border-left: $dark-border;
     }
   }
 }
