--- a/src/components/tab-list/styles.scss
+++ b/src/components/tab-list/styles.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: $big-margin;
+    gap: $default-margin;
   }
 
   &__tab {
@@ -15,7 +16,6 @@
     height: $tab-height;
     padding: $small-padding $default-padding;
     border-radius: $border-radius;
-    margin-right: $default-margin;
     box-shadow: $light-button-shadow;
     z-index: $base-z-index;
 
@@ -60,8 +60,6 @@
     .tab-list__tabs {
       flex-direction: column;
       align-items: flex-end;
-      margin-bottom: $small-margin;
-      margin-top: $small-margin;
     }
 
     .tab-list__tab {
