--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -1,6 +1,18 @@
 @import 'styles/sizes.scss';
+@import 'styles/mixins/scrollbar-styles.scss';
 
 .direct-proofs-editor {
+  &__table {
+    margin-bottom: $big-margin;
+
+    & > table > tbody > tr > td:nth-child(3n) {
+      text-align: left;
+      max-width: 51vw;
+      overflow-x: auto;
+      @include scrollbar-styles(light);
+    }
+  }
+
   &__toolbar {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
