ts-46: implement slice logic

--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -22,4 +22,14 @@
     align-items: center;
     justify-items: center;
   }
+
+  &__premise {
+    .form {
+      padding: $default-padding;
+    }
+
+    .text-input {
+      margin-bottom: $big-margin;
+    }
+  }
 }
