ts-49: fix form styles

--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -36,4 +36,18 @@
   &__filler {
     margin-top: $big-margin;
   }
+
+  &__implication-creation {
+    .modal-window__content {
+      padding: $default-padding;
+    }
+
+    .text-input {
+      margin: $big-padding 0;
+    }
+
+    p:nth-child(2) {
+      text-align: center;
+    }
+  }
 }
