--- a/src/components/table/styles.scss
+++ b/src/components/table/styles.scss
@@ -7,6 +7,7 @@
 
   &__cell {
     text-align: center;
+    vertical-align: middle;
     padding: $default-padding;
     border: $light-border;
   }
