--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -13,6 +13,7 @@ $header-height: 5rem;
 $footer-height: 2rem;
 $scrollbar-width: 0.6rem;
 $tab-height: 2.4rem;
+$formula-preview-height: 4rem;
 
 // Fonts
 $base-font-size: 1.2rem;
