--- a/src/components/controls/formula-preview/styles.scss
+++ b/src/components/controls/formula-preview/styles.scss
@@ -12,6 +12,12 @@
     padding: 0 $small-padding;
   }
 
+  &__error {
+    padding: 0 $small-padding;
+    font-size: $tiny-font-size;
+    color: $light-strong-accent-color;
+  }
+
   // Default colors
   border: $light-weak-border;
 
