ts-61: add premise form validation

--- a/src/components/propositions/implication-creation-form/styles.scss
+++ b/src/components/propositions/implication-creation-form/styles.scss
@@ -2,6 +2,7 @@
 
 .implication-creation-form {
   padding: $default-padding;
+  min-width: $min-popup-form-width;
 
   &__input {
     margin: $big-padding 0;
