--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -14,6 +14,7 @@ $footer-height: 2rem;
 $scrollbar-width: 0.6rem;
 $tab-height: 2.4rem;
 $formula-preview-height: 4rem;
+$min-popup-form-width: 36.25rem;
 
 // Fonts
 $base-font-size: 1.2rem;
